# cashbox_client

./: .gitignore  InstScript.nsi  Makefile  README.md  build.cmd  build.py  cashbox_client.py  config.yaml  installer_script.iss  main.py  pyproject.toml  requirements.txt
operations/: config.py  setup_cashbox.py
source/: cashbox.py  logger.py  websocket_client.py
src/: cashbox.py  constants.py  errors.py  ws_client.py
src/ui/: cashbox_widget.py  log_widget.py  main_window.py  menu_widget.py  tab_widget.py
ui/: main_window.py
